docs: Expanded documentation with theorical research

--- a/docs/cover/project_cover.tex
+++ b/docs/cover/project_cover.tex
@@ -29,7 +29,7 @@
                 {\large\textbf{Final Degree Project}} \\[0.5cm]
                 \textbf{Author:} \\ \MyAuthor \\[0.2cm]
                 \textbf{Supervisor(s):} \\
-                Jordi Linares Pellicer \\[0.2cm]
+                Antonio Molina Picó \\[0.2cm]
                 \textbf{Academic Year:} \\
                 2024/2025 \\[0.2cm]
                 &
