docs: Added updates to various chapters

--- a/docs/main.tex
+++ b/docs/main.tex
@@ -16,7 +16,7 @@
 \usepackage{nomencl}                            % For nomenclature
 
 \makenomenclature
-\bibliographystyle{plain}                       % APA style for bibliography
+\bibliographystyle{apalike}                     % APA style for bibliography
 \setlength{\headheight}{14.49998pt}             % Adjust head height
 
 \title{Neural Analytics: una herramienta software basada en redes neuronales de procesado de EEGs}
