docs: Expanded Brain Regions

--- a/docs/bibliography.bib
+++ b/docs/bibliography.bib
@@ -43,3 +43,54 @@
   isbn      = {978-1-80181-931-2},
   url       = {https://www.packt.com}
 }
+
+
+@book{Kandel_Jessell_Schwartz_2001,
+  address   = {Madrid},
+  edition   = {4a ed.},
+  title     = {Principios de neurociencia},
+  isbn      = {84-486-0311-7},
+  publisher = {McGraw-Hill Interamericana},
+  author    = {Kandel, Eric R and Jessell, Thomas M and Schwartz, James H},
+  year      = {2001},
+  keywords  = {Neuroquímica},
+  language  = {spa}
+}
+
+// #region Sección de Neurociencia
+
+@article{Rissman_Wagner_2012,
+  title={Distributed representations in memory: Insights from functional brain imaging},
+  author={Rissman, Jesse and Wagner, Anthony D.},
+  journal={Annual Review of Psychology},
+  volume={63},
+  pages={101--128},
+  year={2012},
+  publisher={Annual Reviews},
+  doi={10.1146/annurev-psych-120710-100344}
+}
+
+@article{Squire_Zola_Morgan_1991,
+  title={The medial temporal lobe memory system},
+  author={Squire, Larry R. and Zola-Morgan, Stuart},
+  journal={Science},
+  volume={253},
+  number={5026},
+  pages={1380--1386},
+  year={1991},
+  publisher={American Association for the Advancement of Science},
+  doi={10.1126/science.1896849}
+}
+
+@article{Brouwer_Heeger_2013,
+  title={Categorical clustering of the neural representation of color},
+  author={Brouwer, Gijs J. and Heeger, David J.},
+  journal={Journal of Neuroscience},
+  volume={33},
+  number={39},
+  pages={15454--15465},
+  year={2013},
+  publisher={Society for Neuroscience},
+  doi={10.1523/JNEUROSCI.2472-13.2013}
+}
+// #endregion
