--- a/docs/main.tex
+++ b/docs/main.tex
@@ -16,6 +16,7 @@
 \usepackage{authoraftertitle}                   % For author and title
 \usepackage{lipsum}                             % For dummy text
 \usepackage{nomencl}                            % For nomenclature
+\usepackage{natbib}                             % For bibliography  
 
 \makenomenclature
 \makeindex
