docs(general): Corrections before delivery

--- a/docs/bibliography.bib
+++ b/docs/bibliography.bib
@@ -1,6 +1,15 @@
+@book{martin2017clean,
+  title     = {Clean Architecture: A Craftsman's Guide to Software Structure and Design},
+  author    = {Martin, Robert C.},
+  year      = {2017},
+  publisher = {Pearson},
+  address   = {Boston, USA},
+  isbn      = {9780134494166},
+  note      = {Consultado el 3 de marzo de 2025}
+}
 @misc{UNE-EN-62304,
   author    = {{Asociación Española de Normalización}},
-  title     = {{UNE-EN 62304:2007/A1:2016 - Software para dispositivos médicos - Procesos del ciclo de vida del software}},
+  title     = {{UNE-EN 62304:2007 - Software para dispositivos médicos - Procesos del ciclo de vida del software}},
   year      = {2016},
   publisher = {Asociación Española de Normalización},
   address   = {Madrid, España},
@@ -60,37 +69,37 @@
 // #region Sección de Neurociencia
 
 @article{Rissman_Wagner_2012,
-  title={Distributed representations in memory: Insights from functional brain imaging},
-  author={Rissman, Jesse and Wagner, Anthony D.},
-  journal={Annual Review of Psychology},
-  volume={63},
-  pages={101--128},
-  year={2012},
-  publisher={Annual Reviews},
-  doi={10.1146/annurev-psych-120710-100344}
+  title     = {Distributed representations in memory: Insights from functional brain imaging},
+  author    = {Rissman, Jesse and Wagner, Anthony D.},
+  journal   = {Annual Review of Psychology},
+  volume    = {63},
+  pages     = {101--128},
+  year      = {2012},
+  publisher = {Annual Reviews},
+  doi       = {10.1146/annurev-psych-120710-100344}
 }
 
 @article{Squire_Zola_Morgan_1991,
-  title={The medial temporal lobe memory system},
-  author={Squire, Larry R. and Zola-Morgan, Stuart},
-  journal={Science},
-  volume={253},
-  number={5026},
-  pages={1380--1386},
-  year={1991},
-  publisher={American Association for the Advancement of Science},
-  doi={10.1126/science.1896849}
+  title     = {The medial temporal lobe memory system},
+  author    = {Squire, Larry R. and Zola-Morgan, Stuart},
+  journal   = {Science},
+  volume    = {253},
+  number    = {5026},
+  pages     = {1380--1386},
+  year      = {1991},
+  publisher = {American Association for the Advancement of Science},
+  doi       = {10.1126/science.1896849}
 }
 
 @article{Brouwer_Heeger_2013,
-  title={Categorical clustering of the neural representation of color},
-  author={Brouwer, Gijs J. and Heeger, David J.},
-  journal={Journal of Neuroscience},
-  volume={33},
-  number={39},
-  pages={15454--15465},
-  year={2013},
-  publisher={Society for Neuroscience},
-  doi={10.1523/JNEUROSCI.2472-13.2013}
+  title     = {Categorical clustering of the neural representation of color},
+  author    = {Brouwer, Gijs J. and Heeger, David J.},
+  journal   = {Journal of Neuroscience},
+  volume    = {33},
+  number    = {39},
+  pages     = {15454--15465},
+  year      = {2013},
+  publisher = {Society for Neuroscience},
+  doi       = {10.1523/JNEUROSCI.2472-13.2013}
 }
 // #endregion
