docs(general): Review all parts of repo to align with UPV normative

--- a/docs/bibliography.bib
+++ b/docs/bibliography.bib
@@ -102,4 +102,33 @@
   publisher = {Society for Neuroscience},
   doi       = {10.1523/JNEUROSCI.2472-13.2013}
 }
+
+@book{dumbravan2022clean,
+  title={Clean Android Architecture: Take a layered approach to writing clean, testable, and decoupled Android applications},
+  author={Dumbravan, Alexandru},
+  year={2022},
+  month={jun},
+  publisher={Packt Publishing},
+  isbn={9781803234588},
+  pages={366},
+  edition={1st},
+  language={english},
+  note={Capítulo 9: Implementing an MVI Architecture},
+  keywords={Android, MVI, Clean Architecture, Kotlin, Software Architecture, Mobile Development}
+}
+
+@book{blackheath2016functional,
+  title={Functional Reactive Programming},
+  author={Blackheath, Stephen and Jones, Anthony},
+  year={2016},
+  month={jul},
+  publisher={Manning Publications},
+  isbn={9781633430105},
+  pages={360},
+  edition={1st},
+  language={english},
+  note={Fundamentos de programación funcional reactiva con Sodium, RxJS y Kefir.js},
+  keywords={Functional Programming, Reactive Programming, FRP, Sodium, JavaScript, Software Design}
+}
+
 // #endregion
